# console_graphics

./: .gitignore  CMakeLists.txt  build.zsh  readme.md
headers/: ImageBuffer.hpp  Intensity.hpp  Pixel.h  RenderImage.hpp  ansi.hpp  str4.hpp
source/: ansi.cpp  main.cpp  str4.cpp
